PP-13333 parity checker checks exemption data matches (#5669)
* PP-13333 parity checker checks exemption data matches in connector and ledger

---------

Co-authored-by: Marco Tranchino <marco.tranchino@digital.cabinet-office.gov.uk>
Co-authored-by: AbdirizakIdris <abzak7@hotmail.co.uk>